Lower angle z-index to avoid overlapping header elements

--- a/src/AppBundle/Styles/modules/_SEL-Section.scss
+++ b/src/AppBundle/Styles/modules/_SEL-Section.scss
@@ -43,6 +43,7 @@ $SEL-Section-angle-size: 48px;
             background: transparent url('/img/angles.svg#angle') no-repeat top left;
             position: absolute;
             top: 100%;
+            z-index: -1;
         }
     }
 
